--- a/circle.yml
+++ b/circle.yml
@@ -17,11 +17,11 @@ test:
     - sleep 15 && curl --retry 10 --retry-delay 5 -v http://${BUILD_HOST}:7777
     - docker stop ic-risc && docker rm --force ic-risc
 
-#deployment:
-#  master: 
-#    branch: master
-#    commands:
-#      - docker login --email fredhutch@fhcrc.org --username $DOCKERIMAGES_USER --password $DOCKERIMAGES_PASS https://dockerimages.fhcrc.org
-#      - docker push dockerimages.fhcrc.org/gecco-figi:latest
+deployment:
+  master: 
+    branch: master
+    commands:
+      - docker login --email fredhutch@fhcrc.org --username $DOCKERIMAGES_USER --password $DOCKERIMAGES_PASS https://dockerimages.fhcrc.org
+      - docker push dockerimages.fhcrc.org/gecco-figi:latest
 #      - sleep 15
 #      - rancher-compose-v0.12.5/rancher-compose --project-name ic-risc --url https://ponderosa.fhcrc.org/v1/projects/1a195  --access-key $RANCHERAPI_KEY --secret-key $RANCHERAPI_SECRET up -d --pull --force-upgrade --confirm-upgrade ic-risc-working
