--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,32 @@
 
 before_script:
-  - curl -LO https://releases.rancher.com/cli/v0.6.2/rancher-linux-amd64-v0.6.2.tar.gz
-  - tar zxf rancher-linux-amd64-v0.6.2.tar.gz
+  - apk update
+  - apk --no-cache add py3-pip python3 curl
+  - pip3 install pyyaml
+  - curl -O https://raw.githubusercontent.com/FredHutch/swarm-build-helper/main/build_helper.py 
+  # below is from https://stackoverflow.com/a/65810302/470769
+  - mkdir -p $HOME/.docker
+  - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
+  - set -x
 
-build_test:
+stages:
+  - build
+  - test
+  - deploy
+
+build:
+  stage: build
   script:
-    - docker build -t dockerimages.fhcrc.org/ic-risc:latest .
-    - |
-        if docker ps -a|tr -s ' '|rev|cut -d ' ' -f 1|rev|grep -q ic-risc
-        then
-          docker stop ic-risc && docker rm --force ic-risc
-        fi
-    - docker run -d --name ic-risc -p 3838:3838 dockerimages.fhcrc.org/ic-risc:latest
-    - sleep 15 && curl -sI  http://localhost:3838  |head -1|grep -q "200 OK"
-    - docker stop ic-risc && docker rm --force ic-risc
+    - docker build -t sc-registry.fredhutch.org/ic-risc:test .
+    - docker push sc-registry.fredhutch.org/ic-risc:test
 
+test:
+  stage: test
+  services: 
+    - name: sc-registry.fredhutch.org/ic-risc:test
+      alias: ic-risc
+  script:
+    - sleep 15 && curl -sI  http://ic-risc:3838  |head -1|grep -q "200 OK"
 
 deploy:
   stage: deploy
@@ -22,7 +34,9 @@ deploy:
     refs:
         - master
   script:
-    - docker login --username $DOCKERIMAGES_USER --password $DOCKERIMAGES_PASS https://dockerimages.fhcrc.org
-    - docker push dockerimages.fhcrc.org/ic-risc:latest
+    - docker tag sc-registry.fredhutch.org/ic-risc:test sc-registry.fredhutch.org/ic-risc:latest
+    - docker push sc-registry.fredhutch.org/ic-risc:latest
     - sleep 15
-    - rancher-v0.6.2/rancher --url https://ponderosa.fhcrc.org --access-key $RANCHERAPI_KEY --secret-key $RANCHERAPI_SECRET up -d --pull --force-upgrade --confirm-upgrade --stack ic-risc --file docker-compose.yml --rancher-file rancher-compose.yml
+    - echo $SC_SWARM_CICD_SSH_KEY | base64 -d > ./sc_swarm_cicd_ssh_key
+    - chmod 0400 ./sc_swarm_cicd_ssh_key
+    - python3 build_helper.py docker-compose.yml | ssh -i ./sc_swarm_cicd_ssh_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@sc-swarm-mgr.fhcrc.org docker stack deploy --with-registry-auth -c - ic-risc
