--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
-version: '2'
+version: '3.3'
 services:
   ic-risc:
-    image: dockerimages.fhcrc.org/ic-risc:latest
-    ports:
-    - "3838"
-    labels:
-      io.rancher.container.pull_image: always
+    image: sc-registry.fredhutch.org/ic-risc:latest
+    networks:
+      - proxy
+    deploy:
+      restart_policy:
+        condition: on-failure
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.ic-risc.rule=Host(`ic-risc.fredhutch.org`)"
+        - "traefik.http.routers.ic-risc-secured.rule=Host(`ic-risc.fredhutch.org`)"
+        - "traefik.http.routers.ic-risc.entrypoints=web,web-secured"
+        - "traefik.http.services.ic-risc.loadbalancer.server.port=3838" # it seems you always need to give traefik a port so it 'notices' the service
+        - "traefik.http.routers.ic-risc.tls=true"
+
+networks:
+  proxy:
+    external: true
