--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -10,7 +10,7 @@ server {
 
     # Host the directory of Shiny Apps stored in this directory
     # site_dir /srv/shiny-server;
-    app_dir /srv/shiny-server/01_hello;
+    app_dir /srv/shiny-server/;
 
     # Log all Shiny output to files in this directory
     log_dir /var/log/shiny-server;
